--- a/wydk/src/main/resources/application.yml
+++ b/wydk/src/main/resources/application.yml
@@ -42,3 +42,4 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
