--- a/wydk/src/main/resources/application.yml
+++ b/wydk/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     druid:
-      username: lxh
-      password: lxh123456
-      url: jdbc:mysql://cdb-o742k9kc.bj.tencentcdb.com:10035/lxh?useSSL=true&verifyServerCertificate=false&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
+      username: newdata
+      password: nWGNKPwmZJyGN2ii
+      url: jdbc:mysql://182.61.181.98:3306/newdata?useSSL=true&verifyServerCertificate=false&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
       driver-class-name: com.mysql.cj.jdbc.Driver
       initial-size: 5
       min-idle: 5
