--- a/wydk/src/main/resources/application.yml
+++ b/wydk/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     druid:
-      username: newdata
-      password: nWGNKPwmZJyGN2ii
-      url: jdbc:mysql://182.61.181.98:3306/newdata?useSSL=true&verifyServerCertificate=false&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
+      username: root
+      password: 1990101lB
+      url: jdbc:mysql://47.93.54.0:3306/qh?useSSL=true&verifyServerCertificate=false&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
       driver-class-name: com.mysql.cj.jdbc.Driver
       initial-size: 5
       min-idle: 5
